force-app/main/default/objects/Patient_Concern__c/Patient_Concern__c.object-meta.xml
<CustomObject>
    <label>Patient Concern</label>
    <nameField>
        <displayFormat>Con-{000000}</displayFormat>
        <label>Concern Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Concerns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>