force-app/main/default/objects/Patient_Concern__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Concerns</relationshipLabel>
    <relationshipName>Patient_Concerns</relationshipName>
    <type>Lookup</type>
</CustomField>