force-app/main/default/objects/Patient_Concern__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Concern__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case__c</field>
        <operation>equals</operation>
        <value>00001033</value>
    </filters>
    <label>All</label>
</ListView>